# src/api.yaml
@@ -19,8 +19,6 @@ paths:
                 type: array
                 items:
                   type: string
-        "500":
-          description: Runtime failure
   /components:
     get:
       summary: List all components
@@ -34,8 +32,19 @@ paths:
                 type: array
                 items:
                   type: string
-        "500":
-          description: Runtime failure
+  /resources:
+    get:
+      summary: List all resources
+      operationId: listResources
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
   /component/{address}:
     get:
       summary: Get info about a component
@@ -56,23 +65,12 @@ paths:
                 $ref: "#/components/schemas/Component"
         "404":
           description: Component not found
-        "500":
-          description: Runtime failure
-  /resources:
-    get:
-      summary: List all resources
-      operationId: listResources
-      responses:
-        "200":
-          description: Success
+        "400":
+          description: BadRequest
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: string
-        "500":
-          description: Runtime failure
+                $ref: "#/components/schemas/BadRequest"
   /resource/{address}:
     get:
       summary: Get info about a resource
@@ -93,8 +91,12 @@ paths:
                 $ref: "#/components/schemas/Resource"
         "404":
           description: Resource not found
-        "500":
-          description: Runtime failure
+        "400":
+          description: BadRequest
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequest"
   /nonce:
     get:
       summary: Get the nonce of a signer set
@@ -115,8 +117,12 @@ paths:
             application/json:
               schema:
                 type: integer
-        "500":
-          description: Runtime failure
+        "400":
+          description: BadRequest
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequest"
   /receipt/{hash}:
     get:
       summary: Retrieve a receipt
@@ -136,7 +142,13 @@ paths:
               schema:
                 $ref: "#/components/schemas/Receipt"
         "404":
-          description: Transaction not found
+          description: Receipt not found
+        "400":
+          description: BadRequest
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequest"
   /transaction/{hash}:
     get:
       summary: Retrieve a transaction
@@ -157,6 +169,12 @@ paths:
                 $ref: "#/components/schemas/Transaction"
         "404":
           description: Transaction not found
+        "400":
+          description: BadRequest
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequest"
   /transaction:
     post:
       summary: Execute a signed transaction
@@ -175,8 +193,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Receipt"
-        "500":
-          description: Runtime failure
+        "400":
+          description: BadRequest
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequest"
   /manifest:
     post:
       summary: Execute a manifest with the shared account
@@ -195,11 +217,26 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Receipt"
-        "500":
-          description: Runtime failure
+        "400":
+          description: BadRequest
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequest"
 components:
   schemas:
-    AnyValue: {}
+    BadRequest:
+      type: object
+      properties:
+        status:
+          type: string
+        reason:
+          type: string
+      required:
+        - status
+        - reason
+    AnyValue:
+      type: string
     Signature:
       type: object
       properties:
